# personal-health-data

./: .gitignore  AGENTS.md  Makefile  README.md  config.yaml  main.py  pyproject.toml
app/: __init__.py  config.py  database.py  layout.py  main.py  plots.py
docs/: infra.md
env/: .env.example
lib/: __init__.py  cli.py  config.py  database.py  db_connection.py  fetcher.py  models.py  parser.py  transformer.py  validator.py
notes/: mvp-4-test.md  postgresql-implementation.md  render-pg-questions.md  render-pg.md
notes/issues/_done/_defunct/: deploy-plotly-cloud.md
notes/issues/low/: tables.md
notes/issues/medium/: misc-medium.md
notes/issues/mvp/_done/: mvp-1-setup.md  mvp-2-lib.md  mvp-3-app.md
notes/issues/very high/mvp/: mvp-4-test-summary1.md
notes/issues/very high/mvp/_done/: misc-tasks-1.md  mvp-questions.md  mvp.md
tests/: conftest.py
tests/test_app/: test_app_database.py  test_plots.py
tests/test_lib/: test_cli.py  test_config.py  test_database.py  test_fetcher.py  test_integration.py  test_parser.py  test_transformer.py  test_validator.py
tests/test_lib/input/: alc-2024-02-26--2024-03-03-16events.csv
